# java-security-optimizer

./: .gitignore  GETTING_STARTED.md  JAVA技术与知识点讲解.md  USAGE.md  pom.xml  桌面端打包使用说明（Windows）.md
.github/workflows/: quality-gate.yml
.trae/rules/: project.md
apps/desktop/: README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web-ui/: index.html  package-lock.json  package.json
apps/web-ui/src/: App.css  App.tsx  index.css
apps/web-ui/src/mocks/: mockData.ts
apps/web-ui/src/pages/: CodeDiffPage.tsx  IssuesPage.tsx  JitHintPage.tsx  ProjectPage.tsx  TaskPage.tsx
apps/web-ui/src/services/: backendApi.ts  issueIndexDb.ts
apps/web-ui/src/store/: workbenchStore.tsx
apps/web-ui/src/types/: workbench.ts
docs/java-modules/: 00-模块学习总览.md  01-analysis-分析引擎详解.md  02-task-storage-任务调度与状态管理.md  03-plugin-rulepack-security-插件与规则包安全.md  04-autofix-自动修复链路详解.md  05-governance-规则治理与策略配置.md  v2-00-源码精读总览.md  v2-01-analysis-源码精读.md  v2-02-task-storage-源码精读.md  v2-03-plugin-rulepack-security-源码精读.md  v2-04-autofix-governance-源码精读.md  v3-00-方法级学习总览.md  v3-01-analysis-方法级清单.md  v3-02-task-storage-方法级清单.md  v3-03-plugin-rulepack-security-方法级清单.md  v3-04-autofix-governance-方法级清单.md  v3-05-30天学习计划.md
src/main/resources/: application.properties
src/main/resources/离线代码优化器/: 00-项目总览.md  01-桌面容器模块.md  02-前端工作台模块.md  03-Java分析引擎模块.md  04-规则中心与规则包模块.md  05-数据存储与索引模块.md  06-安全与签名-第一批交付说明.md  06-安全与签名模块.md  07-任务调度与可观测模块.md  08-插件扩展与C++预留-第一批交付说明.md  08-插件扩展与C++预留模块.md
(+142 files in other folders)
